<resources>
    <string name="app_name">MealFinder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search for restaurants</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="macrobiotic">Macrobiotic</string>
    <string name="paleo">Paleo</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_message">Welcome to the App! Choose your diets!</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_name">Log name</string>
    <string name="meal_name">Meal Name</string>
    <string name="date_of_meal">Date of meal</string>
    <string name="picture">Picture</string>
    <string name="take_a_picture">Take a picture!</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="image_details">Image Details</string>
    <string name="details">Details</string>
    <string name="average_cost_for_two">Average Cost for Two</string>
    <string name="cuisines">Cuisines</string>
    <string name="reviews">Reviews</string>
    <string name="make_a_review">Make a Review</string>
    <string name="diets_chosen">Diets Chosen</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="profile_picture">Profile picture</string>

</resources>
