<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/profile_picture"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <Button
        android:id="@+id/diets_choosed"
        style="@style/profileButtonStyle"
        android:text="@string/diets_chosen" />

    <Button
        style="@style/profileButtonStyle"
        android:text="@string/settings" />

    <Button
        style="@style/profileButtonStyle"
        android:text="@string/help" />

    <Button
        android:id="@+id/log_out"
        style="@style/profileButtonStyle"
        android:text="@string/log_out" />
</LinearLayout>